--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,7 @@
 @import
+  "vendors/normalize.scss";
+
+@import
   "abstracts/variables.scss",
   "abstracts/mixin.scss";
 
@@ -11,3 +14,7 @@
 @import
   "index/prewiew.scss",
   "index/advantages.scss";
+
+@import
+  "foto/prewiew-min.scss",
+  "foto/gallery.scss";
