--- a/source/sass/abstracts/variables.scss
+++ b/source/sass/abstracts/variables.scss
@@ -4,3 +4,4 @@ $font-bold: ("PT Sans Bold", "Arial Bold", sans-serif);
 //перемнные цветов
 $light-grey-blue: #81b3d2;
 $dark-grey: #333333;
+$form-grey: #f2f2f2;
