--- a/source/sass/foto/prewiew-min.scss
+++ b/source/sass/foto/prewiew-min.scss
@@ -1,3 +1,12 @@
+.prewiew-min {
+
+}
+
 .prewiew-min__landscape {
   @include bg-prewiew;
+  background-color: lightskyblue;
+}
+
+.prewiew-min__image {
+
 }
