--- a/source/sass/general/footer.scss
+++ b/source/sass/general/footer.scss
@@ -1,12 +1,64 @@
+.page-footer {
+
+}
+
+.page-footer__wrapper {
+
+}
+
 .page-footer__hash-tag {
   font-family: $font-bold;
   font-size: 21px;
+}
+
+.page-footer__social {
+
+}
+
+.social {
+
 }
 
 .social-list {
   @include list-style;
 }
 
+.social-item {
+
+}
+
 .socail-link {
   background-color: $light-grey-blue;
+}
+
+.social-link--twitter {
+
+}
+
+.social-link--facebook {
+
+}
+
+.social-link--youtube {
+
+}
+
+.page-footer__copyright {
+
+}
+
+.copyright {
+
+}
+
+.copyright__discription {
+
+}
+
+.copyrigth__link {
+
+}
+
+.copyrigth__image {
+
 }
