--- a/source/sass/general/header.scss
+++ b/source/sass/general/header.scss
@@ -1,8 +1,48 @@
+.page-header {
+
+}
+
+.page-header__menu {
+
+}
+
+.page-header__logo {
+
+}
+
+.page-header__logo-image {
+
+}
+
+.page-header__button {
+
+}
+
+.main-nav {
+
+}
+
+.main-nav__wrapper {
+
+}
+
 .main-nav__list {
   margin: 0;
   padding: 0;
 
   list-style: none;
+}
+
+.site-list {
+
+}
+
+.site-list__item {
+
+}
+
+.site-list__item--active {
+
 }
 
 .site-list__link {
