--- a/source/sass/abstracts/mixin.scss
+++ b/source/sass/abstracts/mixin.scss
@@ -29,10 +29,26 @@
   color: $dark-grey;
 }
 
-@mixin bg-prewiew {
+@mixin bg-prewiew-mobile {
   height: 389px;
 
   background-image: url("../img/bg-back-mobile@1x.jpg");
+  background-position: 0 0;
+  background-repeat: no-repeat;
+}
+
+@mixin bg-prewiew-tablet {
+  height: 518px;
+
+  background-image: url("../img/bg-back-tablet@1x.jpg");
+  background-position: 0 0;
+  background-repeat: no-repeat;
+}
+
+@mixin bg-prewiew-desctop {
+  height: 518px;
+
+  background-image: url("../img/bg-back-desktop@1x.jpg");
   background-position: 0 0;
   background-repeat: no-repeat;
 }
