--- a/source/sass/abstracts/variables.scss
+++ b/source/sass/abstracts/variables.scss
@@ -5,3 +5,7 @@ $font-bold: ("PT Sans Bold", "Arial Bold", sans-serif);
 $light-grey-blue: #81b3d2;
 $dark-grey: #333333;
 $form-grey: #f2f2f2;
+
+//переменные для экранов
+$tablet-width: 768px;
+$desctop-width: 1200px;
