--- a/source/sass/general/body.scss
+++ b/source/sass/general/body.scss
@@ -1,6 +1,7 @@
 body {
-  width: 320px;
-  margin: auto;
+  min-width: 320px;
+  max-width: 1200px;
+  margin: 0 auto;
   padding: 0;
 
   font-family: "PT Sans", "Arial", sans-serif;
@@ -10,4 +11,9 @@ body {
   text-align: center;
 
   background-color: rgb(255, 255, 255);
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
