Выполнена сетка для основных элементов страниц проекта

--- a/source/sass/abstracts/mixin.scss
+++ b/source/sass/abstracts/mixin.scss
@@ -33,7 +33,7 @@
   height: 389px;
 
   background-image: url("../img/bg-back-mobile@1x.jpg");
-  background-position: 0 0;
+  background-position: bottom;
   background-repeat: no-repeat;
 }
 
@@ -41,15 +41,15 @@
   height: 518px;
 
   background-image: url("../img/bg-back-tablet@1x.jpg");
-  background-position: 0 0;
+  background-position: bottom;
   background-repeat: no-repeat;
 }
 
-@mixin bg-prewiew-desctop {
+@mixin bg-prewiew-desktop {
   height: 518px;
 
   background-image: url("../img/bg-back-desktop@1x.jpg");
-  background-position: 0 0;
+  background-position: bottom;
   background-repeat: no-repeat;
 }
 
