--- a/source/sass/abstracts/variables.scss
+++ b/source/sass/abstracts/variables.scss
@@ -1,11 +1,12 @@
 //переменная для толстого шрифта
-$font-bold: ("PT Sans Bold", "Arial Bold", sans-serif);
+$font-bold: ("PTSans-Bold", "Arial Bold", sans-serif);
 
 //перемнные цветов
 $light-grey-blue: #81b3d2;
 $dark-grey: #333333;
+$border-color: #949494;
 $form-grey: #f2f2f2;
 
 //переменные для экранов
 $tablet-width: 768px;
-$desctop-width: 1200px;
+$desktop-width: 1200px;
