--- a/source/sass/general/header.scss
+++ b/source/sass/general/header.scss
@@ -55,14 +55,15 @@
 
   width: 320px;
   height: 56px;
-}
 
-.site-list__item--active {
+  &--active {
 
+  }
 }
 
 .site-list__link {
   font-size: 18px;
+  font-weight: 700;
   line-height: 40px;
   text-decoration: none;
 
@@ -119,7 +120,7 @@
   }
 }
 
-@media (min-width: $desctop-width) {
+@media (min-width: $desktop-width) {
   .page-header {
     width: 1200px;
     margin: 0 auto;
