Выполнены сетки для главной страницы и галереи

--- a/source/sass/abstracts/mixin.scss
+++ b/source/sass/abstracts/mixin.scss
@@ -58,3 +58,11 @@
   background-color: $form-grey;
   border: none;
 }
+
+@mixin visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
