--- a/source/sass/abstracts/variables.scss
+++ b/source/sass/abstracts/variables.scss
@@ -1,5 +1,5 @@
 //переменная для толстого шрифта
-$font-bold: ("PTSans-Bold", "Arial Bold", sans-serif);
+$font-bold: ("PT Sans Bold", "Arial Bold", sans-serif);
 
 //перемнные цветов
 $light-grey-blue: #81b3d2;
