--- a/source/sass/form/form.scss
+++ b/source/sass/form/form.scss
@@ -1,9 +1,13 @@
 .form {
-
+  margin: 0 auto;
+  margin-bottom: 75px;
+  width: 320px;
 }
 
 .form__title {
-  @include title-style;
+  font-weight: 700;
+  font-size: 18px;
+  margin-top: 58px;
 }
 
 .form__description {
@@ -11,82 +15,156 @@
 }
 
 .form__rewiew {
-
+  margin: 0 auto;
 }
 
 .form__wrapper {
+  width: 320px;
   border-top: 1px solid $form-grey;
 }
 
 .form__module {
-  border-style: none;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin: 0;
   padding: 0;
-}
-
-.module-name {
-
+  width: 320px;
+  border-style: none;
 }
 
 .form__legent {
-  @include title-style;
-  margin: auto;
+  font-size: 21px;
   font-weight: bold;
+
+  margin: 20px auto;
+}
+
+.form__list {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  @include list-style;
+
+  &--radio {
+    margin-top: 43px;
+    margin-bottom: 22px;
+  }
+
+  &--checkbox {
+    margin-top: 43px;
+    margin-bottom: 22px;
+  }
 }
 
 .form__body {
+  width: 280px;
+  display: flex;
+  margin-bottom: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
 
+  &:last-child {
+    margin-bottom: 25px;
+  }
+
+  &--contacts {
+    flex-direction: column;
+  }
+
+  &--radio {
+    margin-bottom: 50px;
+  }
+
+  &--checkbox {
+    margin-bottom: 60px;
+  }
+
+  &--textarea {
+  }
 }
 
-.form__label--text {
+.form__label {
+  display: flex;
+  margin-right: auto;
+  padding-right: 13px;
+
   line-height: 26px;
   color: $dark-grey;
+
+  &--text {
+  align-items: center;
+  }
+
+  &--contacts {
+    padding-left: 22px;
+  }
+
+  &--icon {
+    @include visually-hidden;
+
+    &::after {
+      content: "";
+      width: 58px;
+      height: 58px;
+
+      position: absolute;
+      top: 0;
+      left: 0;
+
+      background-color: tomato;
+    }
+  }
+
+  &--check {
+    padding: 0;
+    padding-left: 60px;
+  }
 }
 
-.module-name__input {
+.form__input {
+  display: block;
+  position: relative;
   @include input-style;
+  padding: 0;
+  flex-grow: 1;
+
+  &--text {
+    height: 58px;
+    padding-left: 22px;
+  }
+
+  &--tel::after {
+    content: "";
+    width: 58px;
+    height: 58px;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    background-color: tomato;
+  }
+
+  &--radio,
+  &--checkbox {
+    @include visually-hidden;
+  }
+
+  &--radio::after {
+    content: "";
+    width: 56px;
+    height: 56px;
+
+    position: absolute;
+
+    background-color: tomato;
+  }
 }
 
-.module-name__input::placeholder {
-  color: black;
-  font-weight: bold;
-}
-
-.module-contacts {
-
-}
-
-.module-contacts__input {
-  @include input-style;
-  font-weight: bold;
-  width: 100%;
-}
-
-.module-contacts__input::placeholder {
-  color: black;
-}
-
-.module-radio {
-
-}
-
-.module-radio__input {
-
-}
-
-.form__label--check {
-  @include title-style;
-  text-transform: none;
-  font-weight: bold;
-}
-
-.module-checkbox {
-
-}
-
-.module-checkbox__input {
-
+.form__label {
+  &--check {
+    @include title-style;
+    text-transform: none;
+    font-weight: bold;
+  }
 }
 
 .form__textarea {
@@ -94,16 +172,392 @@
   font-weight: bold;
   color: black;
 
+  width: 100%;
+  height: 160px;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+
   resize: none;
 }
 
-.form__textarea::placeholder {
-  color: black;
+.form__textarea {
+
+}
+
+.form__footer {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
 }
 
 .form__submit {
   @include blue-block;
   @include big-title-style;
+  text-transform: uppercase;
   border: none;
   cursor: pointer;
+
+  width: 280px;
+  height: 58px;
+  margin-top: 30px;
+}
+
+.form__explanation {
+  display: none;
+  color: $dark-grey;
+}
+
+//------------------------------------------------------styles-for-tablet
+
+@media (min-width: $tablet-width) {
+  .form {
+    width: $tablet-width;
+  }
+
+  .form__title {
+    margin-top: 108px;
+    margin-bottom: 40px;
+
+    font-size: 30px;
+  }
+
+  .form__description {
+    margin-left: 162px;
+    margin-right: 162px;
+  }
+
+  .form__rewiew {
+    display: flex;
+    flex-wrap: wrap;
+
+    margin-top: 64px;
+    width: 648px;
+  }
+
+  .form__wrapper {
+    border: none;
+    margin: 0 auto;
+
+    &--radio {
+      order: -1;
+      border-right: 1px solid $form-grey;
+    }
+
+    &--contacts {
+      margin-top: 75px;
+    }
+
+    &--checkbox {
+      margin-top: 58px;
+    }
+
+    &--textarea {
+      margin-top: 35px;
+    }
+
+    &--contacts,
+    &--checkbox,
+    &--textarea {
+      width: 648px;
+    }
+  }
+
+  .form__body {
+    margin-left: 0;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    &--checkbox {
+      width: 259px;
+      margin-right: 0;
+    }
+
+    &--textarea {
+      width: 648px;
+      height: 160px;
+    }
+  }
+
+  .form__input {
+
+    &--tel,
+    &--email {
+      width: 626px;
+    }
+  }
+
+  .form__legent {
+    &--radio,
+    &--name {
+      margin-top: 0;
+      margin-left: 0;
+    }
+
+    &--contacts,
+    &--checkbox,
+    &--textarea {
+      font-family: "PT Sans", "Arial", sans-serif;
+      font-size: 21px;
+      display: block;
+      width: 400px;
+      margin: 0 auto;
+
+      ::after {
+        content: "";
+        height: 1px;
+        width: auto;
+
+        background-color: $dark-grey;
+      }
+    }
+
+    &--contacts {
+      margin-bottom: 30px;
+    }
+
+    &--checkbox {
+      margin-bottom: 30px;
+    }
+
+    &--textarea {
+      margin-bottom: 60px;
+    }
+  }
+
+  .form__list {
+
+    &--name {
+      margin-top: 25px;
+    }
+
+    &--radio {
+      margin-bottom: 0;
+    }
+
+    &--checkbox {
+      flex-direction: row;
+      flex-wrap: wrap;
+
+      margin-bottom: 0;
+      margin-left: 95px;
+    }
+  }
+
+  .form__module {
+
+    &--name {
+      margin-left: 38px;
+    }
+
+    &--contacts,
+    &--checkbox,
+    &--textarea,
+    & {
+      width: 648px;
+    }
+  }
+
+  .form__footer {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 0px;
+    margin-top: 68px;
+    order: 6;
+
+    width: 648px;
+  }
+
+  .form__submit {
+    margin-top: 0;
+    width: 324px;
+  }
+
+  .form__explanation {
+    display: block;
+
+    font-size: 14px;
+    line-height: 26px;
+  }
+}
+
+//---------------------------------------------styles-for-desktop
+
+@media (min-width: $desktop-width) {
+  .form {
+    width: $desktop-width;
+  }
+
+  .form__rewiew {
+    margin-top: 64px;
+    width: 960px;
+  }
+
+  .form__wrapper {
+    &--radio,
+    &--name {
+      width: 476px;
+    }
+
+    &--contacts {
+      margin-top: 75px;
+    }
+
+    &--checkbox {
+      margin-top: 58px;
+    }
+
+    &--textarea {
+      margin-top: 35px;
+    }
+
+    &--contacts,
+    &--checkbox,
+    &--textarea {
+      width: 960px;
+    }
+  }
+
+  .form__label {
+    padding-right: 16px;
+
+    &--text {
+    align-items: center;
+    }
+
+    &--contacts {
+      padding-left: 0;
+      align-items: center;
+    }
+
+    &--icon {
+      @include visually-hidden;
+
+      &::after {
+        content: "";
+        width: 58px;
+        height: 58px;
+
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        background-color: tomato;
+      }
+    }
+
+    &--check {
+      padding: 0;
+      padding-left: 60px;
+    }
+  }
+
+  .form__list {
+    &--name {
+      margin-top: 25px;
+    }
+
+    &--radio {
+      margin-bottom: 0;
+    }
+
+    &--contacts {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    &--checkbox {
+      margin-top: 48px;
+      margin-bottom: 75;
+      margin-left: 0;
+    }
+  }
+
+  .form__module {
+    &--name,
+    &--radio {
+      width: 476px;
+    }
+
+    &--name {
+      margin-left: 79px;
+    }
+
+    &--contacts,
+    &--checkbox,
+    &--textarea {
+      width: 960px;
+    }
+  }
+
+  .form__body {
+
+    &:last-child {
+    }
+
+    &--contacts {
+      display: flex;
+      flex-direction: row;
+      margin-right: 0;
+
+      width: 50%;
+    }
+
+    &--radio {
+
+    }
+
+    &--checkbox {
+      width: 25%;
+    }
+
+    &--textarea {
+      width: 100%;
+    }
+  }
+
+  .form__legent {
+    line-height: 26px;
+
+    &--radio {
+      width: 476px;
+      margin: 0 auto;
+      padding-right: 83px;
+    }
+
+    &--contacts {
+    }
+
+    &--checkbox {
+    }
+
+    &--textarea {
+    }
+  }
+
+  .form__input {
+    &--tel,
+    &--email {
+      width: auto;
+    }
+  }
+
+  .form__footer {
+    width: 960px;
+  }
+
+  .form__submit {
+    margin-top: 0;
+    width: 480px;
+  }
+
+  .form__explanation {
+    display: block;
+
+    font-size: 14px;
+    line-height: 26px;
+  }
 }
