--- a/source/sass/abstracts/mixin.scss
+++ b/source/sass/abstracts/mixin.scss
@@ -13,13 +13,15 @@
 }
 
 @mixin title-style {
-  font-family: $font-bold;
+  font-family: $mane-font;
+  font-weight: 700;
   font-size: 18px;
   line-height: 26px;
 }
 
 @mixin big-title-style {
-  font-family: $font-bold;
+  font-family: $mane-font;
+  font-weight: 700;
   font-size: 21px;
   line-height: 26px;
 }
