--- a/source/sass/foto/gallery.scss
+++ b/source/sass/foto/gallery.scss
@@ -66,7 +66,7 @@
   margin: 0;
   margin-top: 5px;
 
-  font-family: $font-bold;
+  font-weight: 700;
   font-size: 14px;
   text-transform: uppercase;
 }
