--- a/source/sass/general/header.scss
+++ b/source/sass/general/header.scss
@@ -8,38 +8,57 @@
   margin: 0 auto;
 }
 
-.page-header__menu {
-  order: 2;
-  display: flex;
-  justify-content: flex-end;
-  height: 56px;
-}
-
 .page-header__logo {
   position: absolute;
   left: 110px;
+  top: 224px;
 }
 
 .page-header__logo-image {
 
 }
 
-.page-header__button {
+.main-nav__toggle {
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  cursor: pointer;
 
-}
+  &::after,
+  &::before {
+    content: "";
 
-.main-nav--closed .page-header__button::before {
-  content: "";
+    position: absolute;
+    left: 287px;
+    top: 15px;
 
-  position: absolute;
-  left: 277px;
-  top: 17px;
+    width: 4px;
+    height: 30px;
 
-  width: 23px;
-  height: 4px;
-  background-color: $light-grey-blue;
+    background-color: rgba(255, 255, 255, 1);
+  }
 
-  box-shadow: 0 4px 0 0 $light-grey-blue, 0 4px 0 0 $light-grey-blue;
+  &::after {
+    transform: rotate(45deg);
+  }
+
+  &::before {
+    transform: rotate(-45deg);
+  }
+
+  &:hover::before,
+  &:focus::before,
+  &:hover::after,
+  &:focus::after {
+    background-color: #c9dfec;
+  }
+
+  &:active::before,
+  &:active::after {
+    background-color: #a7cae0;
+  }
 }
 
 .main-nav {
@@ -47,7 +66,7 @@
 }
 
 .main-nav__wrapper {
-
+  height: 255px;
 }
 
 .main-nav__list {
@@ -61,18 +80,29 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  min-height: 223px;
+
+  & a[href] {
+
+    &:hover ,
+    &:focus {
+      background-color: #669ec0;
+    }
+
+    &:active {
+      background-color: #5496bd;
+      color: rgba(255, 255, 255, 0.5);
+    }
+  }
 }
 
 .site-list__item {
   display: flex;
 
   width: 320px;
-  height: 56px;
+  height: 54px;
 
-  &--active {
-
-  }
+  border-top: 1px solid #a3c7dd;
+  border-bottom: 1px solid #69808e;
 }
 
 .site-list__link {
@@ -85,7 +115,89 @@
 
   padding-top: 8px;
   width: 320px;
+
+  &--shadow {
+    box-shadow: inset 0 -4px 4px -2px rgba(0, 0, 0, 0.4);
+  }
 }
+
+//----------------------------------------styles-only-mobile
+
+@media (max-width: $mobile-width-only) {
+  .page-header {
+
+    &--closed {
+      display: flex;
+      flex-direction: column;
+
+      position: relative;
+
+      width: 320px;
+      margin: 0 auto;
+    }
+
+    &--closed .main-nav__wrapper {
+      display: none;
+    }
+
+    &--closed .page-header__logo {
+      position: absolute;
+      left: 110px;
+      top: 0;
+    }
+
+    &--closed .main-nav__toggle {
+      width: 23px;
+      height: 20px;
+      border: 0;
+      margin-top: 15px;
+      margin-left: 256px;
+      margin-bottom: 22px;
+      background-color: white;
+
+      &::before {
+        content: "";
+
+        position: absolute;
+        left: 277px;
+        top: 17px;
+
+        width: 23px;
+        height: 4px;
+
+        background-color: rgba(129, 179, 210, 1);
+        box-shadow: 0 8px 0 0 rgba(129, 179, 210, 1), 0 16px 0 0 rgba(129, 179, 210, 1);
+        cursor: pointer;
+        transform: none;
+      }
+
+      &:hover::before,
+      &:focus::before {
+        background-color: rgba(129, 179, 210, 0.7);
+        box-shadow: 0 8px 0 0 rgba(129, 179, 210, 0.7), 0 16px 0 0 rgba(129, 179, 210, 0.7);
+      }
+
+      &:active::before {
+        background-color: rgba(129, 179, 210, 0.4);
+        box-shadow: 0 8px 0 0 rgba(129, 179, 210, 0.4), 0 16px 0 0 rgba(129, 179, 210, 0.4);
+      }
+
+      &::after {
+        display: none;
+      }
+    }
+
+    &--nojs .main-nav__toggle {
+        display: none;
+    }
+
+    &--nojs .main-nav__wrapper {
+      height: 280px;
+    }
+  }
+}
+
+//----------------------------------------styles-for-tablet
 
 @media (min-width: $tablet-width) {
   .page-header {
@@ -93,17 +205,17 @@
     margin: 0 auto;
   }
 
-  .page-header__menu {
-    height: 0;
-  }
-
   .page-header__logo {
     top: 0;
     left: 333px;
   }
 
-  .page-header__button {
+  .main-nav__toggle {
     display: none;
+  }
+
+  .main-nav__wrapper {
+    height: 56px;
   }
 
   .site-list {
@@ -111,6 +223,20 @@
 
     flex-direction: row;
     justify-content: right;
+
+    & a[href] {
+
+      &:hover ,
+      &:focus {
+        background: none;
+        color: $light-grey-blue;
+      }
+
+      &:active {
+        background: none;
+        color: $border-color;
+      }
+    }
   }
 
   .site-list__item {
@@ -119,19 +245,27 @@
     height: 41px;
     padding-top: 15px;
 
+    border: none;
+
     &--left {
       padding-right: 150px;
     }
   }
 
   .site-list__link {
-    background: none;
-
-    color: black;
-    font-family: $font-bold;
     font-size: 14px;
+    font-weight: 700;
     line-height: 26px;
+    text-decoration: none;
+
+    background: none;
+    color: black;
+
+    &--shadow {
+      box-shadow: none;
+    }
   }
+
 }
 
 @media (min-width: $desktop-width) {
@@ -143,5 +277,12 @@
   .page-header__logo {
     top: 0;
     left: 547px;
+  }
+
+  .site-list__item {
+
+    &--left {
+      padding-right: 250px;
+    }
   }
 }
