--- a/source/sass/index/search-hotel.scss
+++ b/source/sass/index/search-hotel.scss
@@ -5,11 +5,14 @@
 
 .search-hotel__title {
   @include big-title-style;
-  padding-top: 17px;
+  margin: 0;
+  padding-top: 25px;
 }
 
 .search-hotel__discription {
   color: $dark-grey;
+  margin: 0;
+  padding-top: 20px;
   padding-left: 13px;
   padding-right: 13px;
 }
@@ -20,7 +23,7 @@
   @include blue-block;
   border: none;
 
-  margin-top: 40px;
+  margin-top: 35px;
   margin-bottom: 49px;
 
   font-weight: 700;
@@ -30,7 +33,27 @@
 }
 
 .search-hotel__wrapper-map {
+  position: relative;
+  margin: 0;
 
+  &::after {
+    content: "";
+    width: 20px;
+    height: 20px;
+
+    position: absolute;
+    top: 161px;
+    left: 146px;
+
+    background-color: $light-grey-blue;
+    border: 5px solid white;
+    border-radius: 50%;
+  }
+
+  & iframe {
+    height: 350px;
+    width: 320px;
+  }
 }
 
 .searcy-hotel__image-map {
