--- a/source/sass/general/footer.scss
+++ b/source/sass/general/footer.scss
@@ -18,12 +18,9 @@
   padding-top: 14px;
 }
 
-.page-footer__social {
-
-}
-
 .social {
   height: 48px;
+  padding-top: 5px;
 }
 
 .social__list {
@@ -66,11 +63,6 @@
 
 }
 
-.social__sign,
-.copyrigth__sign {
-  @include visually-hidden;
-}
-
 .copyright {
   display: flex;
   justify-content: center;
@@ -106,10 +98,22 @@
     width: 768px;
   }
 
+  .page-footer__hash-tag {
+    padding-top: 0;
+  }
+
   .page-footer__wrapper {
     height: 120px;
     flex-direction: row;
     align-items: center;
+  }
+
+  .social {
+    padding-top: 0;
+  }
+
+  .copyright__discription {
+    padding-top: 15px;
   }
 }
 
@@ -117,6 +121,15 @@
 
 @media (min-width: $desktop-width) {
   .page-footer {
-    width: 1200px;
+    width: $desktop-width;
+  }
+
+  .page-footer__hash-tag {
+    margin-left: -12px;
+  }
+
+  .social {
+    margin-left: 25px;
+    margin-right: 25px;
   }
 }
