--- a/source/sass/index/prewiew.scss
+++ b/source/sass/index/prewiew.scss
@@ -11,7 +11,7 @@
   background-repeat: no-repeat;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    background-image: url("../img/bg-back-mobile@1x.jpg");
+    background-image: url("../img/bg-back-mobile@2x.jpg");
   }
 }
 
@@ -31,6 +31,10 @@
     background-image: url("../img/bg-back-tablet@1x.jpg");
     background-position: bottom;
     background-repeat: no-repeat;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/bg-back-tablet@2x.jpg");
+    }
   }
 }
 
@@ -46,5 +50,9 @@
     background-image: url("../img/bg-back-desktop@1x.jpg");
     background-position: bottom;
     background-repeat: no-repeat;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/bg-back-desktop@2x.jpg");
+    }
   }
 }
